Fix: Fix layout being wrong on smaller screens

--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@ html, body {
   margin: 0;
   padding: 0;
   overflow: hidden;
+  font-size: 93%;
 }
 
 /* Nav bar */
@@ -52,7 +53,7 @@ html, body {
 /* Set basic look for all windows */
 .window {
   position: absolute;
-  width: 600px;
+  width: 30%;
   background: #ece9d8;
   border: 2px solid #0a0f0a;
   box-shadow: 5px 5px 0px rgba(0, 0, 0, 0.2);
@@ -77,7 +78,7 @@ html, body {
 }
 
 .window-content {
-  padding: 10px;
+  padding: 2%;
 }
 
 .iconClick {
@@ -86,20 +87,20 @@ html, body {
 
 /* App icons */
 #appIcons .icon {
-  margin-left: 50px;
+  margin-left: 1.5%;
 }
 
 #appIcons h2 {
   margin-top: 0;
   padding-top: 0;
-  max-width: 100px;
+  max-width: 5%;
   font-size: larger;
   text-align: center;
   font-family: 'Courier New', monospace;
 }
 
 #appIcons {
-  margin-top: 50px;
+  margin-top: 1.5%;
 }
 
 .navClick {
@@ -108,18 +109,22 @@ html, body {
 
 /* Set looks for each window */
 #window-selfie {
-  width: 450px;
-  length: 500px;
+  width: 23%;
+  length: 30%;
 }
 
-#window-school, #window-personal {
-  width: 500px;
+#window-school {
+  width: 30%;
+}
+
+#window-personal {
+  width: 25%;
 }
 
 #window-school .window-content, #window-personal .window-content {
   display: flex;
   flex-direction: row;
-  gap: 20px;
+  gap: 3%;
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
@@ -141,31 +146,31 @@ html, body {
 }
 
 #window-game-img {
-  width: 700px;
+  width: 35%;
 }
 
 #window-game-img .window-content {
   display: flex;
   align-items: center;
-  gap: 15px;
+  gap: 4%;
   justify-content: center;
 }
 
-#game-slideshow {
-  max-height: 400px;
+#game-slideshow, #water-slideshow-container {
+  max-height: 300px;
   object-fit: contain;
 }
 
 #window-task-img {
-  width: 900px;
+  width: 47%;
 }
 
 #window-resume {
-  width: 550px;
+  width: 29%;
 }
 
 #window-contact {
-  width: 250px;
+  width: 13%;
 }
 
 /* Set look for the change language div */
@@ -179,15 +184,15 @@ html, body {
   text-align: center;
   height: auto;
   font-family: 'Courier New', monospace;
-  font-size: 20px;
+  font-size: 130%;
 }
 
 #changeLanguage {
   background: #ece9d8;
-  width: 176px;
+  width: 7.7%;
   margin-bottom: 0;
   position: absolute;
-  top: 74%;
+  top: 76.6%;
   border: 2px solid #0a0f0a;
 }
 
